--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexionSQL": ""
+    "DefaultConnection": "Server=localhost;Port=3306;Database=inventariopro;User=root;Password=root;"
   }
 }
